Add transistor layout with DRC/LVS support and Route class
- Implement NFET/PFET layout generation with horizontal poly orientation
- Support single-finger and multi-finger transistors with parametrization
- Add Route class for M1 routing with jog support
- Extend SKY130LayoutCell with route() method and layer width defaults
- Fix NetlistCell parameter encoding for layout cell names
- Update LVS flow to generate netlists for NetlistCell types
- Add transistor layout test script with DRC and LVS verification
- Update AGENTS.md with venv setup and collaboration guidelines

--- a/examples/tutorials/04_mim_capacitor_sky130.ipynb
+++ b/examples/tutorials/04_mim_capacitor_sky130.ipynb
@@ -38,7 +38,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "[INFO] Netlist written to /Users/fredrief/projects/pade/examples/tutorials/../sim_data/prelayout/CapacitorAC.spice\n",
@@ -53,7 +53,7 @@
           ]
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "[INFO] NGspice complete in 12.6s\n"
@@ -97,12 +97,11 @@
         }
       ],
       "source": [
-        "from pade.layout import UM\n",
         "from pade.backends.gds.layout_writer import GDSWriter\n",
         "from pdk.sky130.primitives.capacitors.layout import CapMimM4Layout\n",
         "from pdk.sky130.layers import sky130_layers\n",
         "\n",
-        "cap_layout = CapMimM4Layout('C1', width=10*UM, height=10*UM)\n",
+        "cap_layout = CapMimM4Layout('C1', width=10, height=10)\n",
         "\n",
         "gds_writer = GDSWriter(layer_map=sky130_layers)\n",
         "gds_path = gds_writer.write(cap_layout, config.layout_dir)\n",
@@ -164,7 +163,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "[INFO] PEX: C1 -> pex_rc.spice\n",
@@ -180,7 +179,7 @@
           ]
         },
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "[INFO] NGspice complete in 12.8s\n"
