Enhance SKY130 layout and configuration with new features and tests
- Added substrate_net_name parameter to SKY130Config for LVS compatibility.
- Updated layer definitions in layers.py to include connectivity attribute for all layers.
- Introduced new via definitions and layer stack in vias.py for improved routing.
- Expanded SKY130LayoutCell with new methods for stacking cells and adding vias.
- Refactored digital layout classes to improve routing and pin management.
- Added test scripts for comparator and digital layouts, including DRC and LVS checks.
- Improved transistor layout handling with updated port management and routing logic.

--- a/examples/tutorials/04_mim_capacitor_sky130.ipynb
+++ b/examples/tutorials/04_mim_capacitor_sky130.ipynb
@@ -105,7 +105,7 @@
         "\n",
         "gds_writer = GDSWriter(layer_map=sky130_layers)\n",
         "gds_path = gds_writer.write(cap_layout, config.layout_dir)\n",
-        "print(f\"Layout: {cap_layout.cell_name}, ports: {list(cap_layout.ports.keys())}\")\n",
+        "print(f\"Layout: {cap_layout.cell_name}, pins: {list(cap_layout.pins.keys())}\")\n",
         "print(f\"GDS: {gds_path}\")"
       ]
     },
