Update project version and enhance documentation for PADE
- Changed project version from 1.0.0-dev to 0.1.0 in pyproject.toml.
- Updated project description to "Programmatic Analog Design Environment".
- Expanded README.md with detailed features, quick start instructions, and project structure.
- Refined SKY130 configuration to include additional paths for digital synthesis and P&R.
- Improved layout and routing classes with enhanced error handling and multi-layer support.
- Added new tests for capacitor and transistor layouts, ensuring DRC and LVS compliance.

--- a/examples/tutorials/old_tutorials/04_mim_capacitor_sky130.ipynb
+++ b/examples/tutorials/old_tutorials/04_mim_capacitor_sky130.ipynb
@@ -98,14 +98,20 @@
       ],
       "source": [
         "from pade.backends.gds.layout_writer import GDSWriter\n",
-        "from pdk.sky130.primitives.capacitors.layout import CapMimM4Layout\n",
+        "from pdk.sky130.layout import SKY130LayoutCell\n",
+        "from pdk.sky130.primitives.capacitors.layout import CapMimLayout\n",
+        "from pdk.sky130.primitives.capacitors.schematic import CapMim\n",
         "from pdk.sky130.layers import sky130_layers\n",
         "\n",
-        "cap_layout = CapMimM4Layout('C1', width=10, height=10)\n",
+        "cap_schematic = CapMim('C1', None, w=10, l=10, metal=4)\n",
+        "root = SKY130LayoutCell(instance_name='C1', parent=None, cell_name='cap_mim_m4')\n",
+        "root.C1 = CapMimLayout.instantiate(root, schematic=cap_schematic)\n",
+        "cap_layout = root\n",
         "\n",
         "gds_writer = GDSWriter(layer_map=sky130_layers)\n",
         "gds_path = gds_writer.write(cap_layout, config.layout_dir)\n",
-        "print(f\"Layout: {cap_layout.cell_name}, pins: {list(cap_layout.pins.keys())}\")\n",
+        "cap_cell = list(cap_layout.subcells.values())[0]\n",
+        "print(f\"Layout: {cap_layout.cell_name}, pins: {list(cap_cell.pins.keys())}\")\n",
         "print(f\"GDS: {gds_path}\")"
       ]
     },
@@ -140,9 +146,8 @@
       ],
       "source": [
         "from utils.design_runner import DesignRunner\n",
-        "from pdk.sky130.primitives.capacitors.schematic import CapMimM4\n",
         "\n",
-        "cap_schematic = CapMimM4('cap_mim_m4', None, w=10, l=10)\n",
+        "# cap_schematic and cap_layout from previous cell\n",
         "design = DesignRunner(cap_layout, cap_schematic)\n",
         "\n",
         "# Run all verification\n",
